After numerous tries I made my website compatible for all major browsers. The first things I needed to change was on the maps.js file the AJAX technology due to CORS policy errors on the free webhosting service. I changed it to a simple fetch() function and on top of that I used a few headers() on the back end index.php file. Then I removed some json responses from the back that were confusing the front and also fixed some issues that were arising due to different versions of php on the webhosting service. At last, I made some modifications on the styling of the website and the navbar because there was the problem where on some machines and browsers the filters wouldn't all be visible, so I decided to fix that with a scroll bar which is only for the side bar. This took me a long time to implement since everything else is setup and I was trying not to mess up any other's elements desings, but at last I implemented it successfully and this is the last version of the BournemouthNooks applications in this period of time. I might come back to this project in the future in order to add user functionalities and others.

--- a/Front_End/main.css
+++ b/Front_End/main.css
@@ -71,7 +71,7 @@ ul {
     display: flex;
     align-items: center;
     position: relative;
-    left: 580px;
+    left: 600px;
     top: 5px;
     margin-right: 0;
     margin-left: 0;
@@ -110,19 +110,17 @@ nav .btns:hover {
 }
 
 .center{
- width: 100%;
- margin: 50px 70px;
- position: relative;
- top: 75px;
+    /* margin: 50px 70px; */
+    position: relative;
+    top: 100px;
+    /* overflow: hidden; */
 }
 
 .center .map {
     position: relative;
     align-items: center;
-    left: 145px;
-    bottom: 35px;
-    margin-right: auto;
-    margin-left: auto;
+    margin-left: 200px;
+    bottom: 30px;
 }
 
 
